// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queue Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "name_prefix": "gTestStack553BDD39-TestStackHelloWorld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth and match SnapShot with prefix 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "kms_master_key_id": "alias/aws/sqs",
        "message_retention_seconds": 1209600,
        "name_prefix": "hello-worldTestStackHelloWorld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with DLQ and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "DLQ_581697C4": {
        "kms_master_key_id": "alias/aws/sqs",
        "message_retention_seconds": 1209600,
        "name_prefix": "gTestStack553BDD39-TestStackDLQ",
        "tags": {
          "Name": "Default-DLQ",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "visibility_timeout_seconds": 900
      },
      "Queue_4A7E3555": {
        "kms_master_key_id": "alias/aws/sqs",
        "message_retention_seconds": 1209600,
        "name_prefix": "gTestStack553BDD39-TestStackQueue",
        "redrive_policy": "{\\"deadLetterTargetArn\\":\\"\${aws_sqs_queue.DLQ_581697C4.arn}\\",\\"maxReceiveCount\\":5}",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with contentBasedDeduplication and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "content_based_deduplication": true,
        "fifo_queue": true,
        "kms_master_key_id": "alias/aws/sqs",
        "message_retention_seconds": 1209600,
        "name_prefix": "gTestStack553BDD39-TestStackQueue",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with fifo suffix and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "fifo_queue": true,
        "kms_master_key_id": "alias/aws/sqs",
        "message_retention_seconds": 1209600,
        "name_prefix": "queueTestStackQueue",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
